# platform-service/modules/notification-service/contracts/openapi/v1/openapi.yaml
@@ -685,7 +685,11 @@ components:
         name:
           type: string
           x-stoplight:
-            id: xwi5kp0p2y69s
+            id: 2ospy7jf4qosf
+        account:
+          type: string
+          x-stoplight:
+            id: l5hb2yj9hwb9f
     NotificationRuleDTO:
       type: object
       x-examples:
@@ -776,26 +780,7 @@ components:
                     notification_channels:
                       type: array
                       items:
-                        type: object
-                        x-stoplight:
-                          id: 1y43ooa3orvl6
-                        properties:
-                          name:
-                            type: string
-                          org:
-                            type: string
-                          project:
-                            type: string
-                          notification_channel_type:
-                            $ref: '#/components/schemas/ChannelType'
-                          status:
-                            type: string
-                          channel:
-                            $ref: '#/components/schemas/ChannelDTO'
-                          created_by:
-                            type: object
-                          created:
-                            type: integer
+                        $ref: '#/components/schemas/NotificationChannelDTO'
                     notification_event_data:
                       type: object
                       x-stoplight:
